# crypto-quant-lab

./: .gitignore  README.md  pyproject.toml
data/: synthetic_order_book.csv
docs/: Combine onchain and offchain relations.md  Cryptocurrency Valuation XAI Aproach.md  Realized Cap.md  Use of Probabilistic Modeling.md  Whales Bubbles.md  data_driven_dr.md
notebooks/: crypto-finlab.ipynb  render.html
notebooks/big-query/: bigquery-bitcoin.ipynb
notebooks/market-maker/: order-book-eda.ipynb
notebooks/pairs/: intramarket_difference.ipynb
notebooks/santiment-api/: santiment.ipynb
notebooks/temporian/: m5_forecasting.ipynb  temporian_tf_random_forest.ipynb
notebooks/time-series/: chronos_foundation_model.ipynb  etth1_results.csv  etth2_results.csv  ettm1_results.csv  ettm2_results.csv  itransformer.ipynb  neuroforecast-e2e.ipynb
